# autocast

./: .all-contributorsrc  .buildinfo  .env  .gitignore  .pre-commit-config.yaml  ETHICAL_GUIDANCE.md  README.md  contributing.html  dashboard.py  genindex.html  import (  index.html  inference_benchmarking.py  inference_benchmarking.yaml  installation.html  objects.inv  other-commands.html  py-modindex.html  pyproject.toml  seaice  search.html  searchindex.js
Qien_Code/: build_osisaf_era5_dataset.py  build_osisaf_era5_dataset.sh  download_era5.py  download_era5.sh  seas5_download_regrid_plot.py  train_vit_oneshot_14day_era5.sh
_modules/: index.html
_sources/: index.md
configs/: ae_ad.yaml  ae_adm.yaml  autoencoder.yaml  encoder_processor_decoder.yaml  epd_ad.yaml  epd_adm.yaml  epd_rd.yaml  processor.yaml
docs/: MULTIENCODER_ATTENTION_MIXER_SHAPES.md  PLOTTING.md  SCRIPTS_AND_CONFIGS.md  _config.yml  _toc.yml  contributing.md  index.md  installation.md
experiment_local/: README.md
exploratory/: test_diffusion.ipynb
howto/: configs.html  index.html  other-commands.html  output-paths.html  resume.html  slurm.html  wandb.html
notebooks/: 00_01_exploration_diffusion_reaction.ipynb  00_exploration.ipynb  00_quickstart.ipynb  00_quickstart_drift.ipynb  00_quickstart_masked.ipynb  01_encoder_decoder.ipynb  02_diffusion.ipynb  03_diffusion_reaction_test.ipynb  04_e2e.ipynb  05_ViT.ipynb  05_ViT_noise.ipynb  06_processor.ipynb  06_processor_dm.ipynb  06_processor_load.ipynb  07_ViT_ensemble.ipynb  07b_UNet_ensemble.ipynb  08_collating_multiple_results.ipynb  (+7 more)
(+887 files in other folders)
