[project]
name = "auto-x"
version = "0.1.0"
description = "Spatiotemporal forecasting"
readme = "README.md"
authors = [
    { name = "AI for Physical Systems Team at The Alan Turing Institute", email = "ai4physics@turing.ac.uk" },
]
requires-python = ">=3.10,<3.13"
dependencies = []

[project.scripts]
auto-x = "auto_x:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
